# links_treat

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.b2f6fcb  Makefile  README.md  main.cpp  treat_directory.cpp  treat_directory.h
src/: main.cpp  services.cpp  services.h  tree.cpp  tree.h  workers.cpp  workers.h
src/files_tree/: file_treat.cpp  file_treat.h  tree.cpp  tree.h  visitor.cpp  visitor.h  workers.cpp  workers.h
